fix layout on safari

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,10 @@
 }
 
 html {
+  display: flex;
+  justify-content: center;
   min-height: 100%;
+  min-height: 100dvh;
   box-sizing: border-box;
   -webkit-box-sizing: border-box; 
   -moz-box-sizing: border-box;
@@ -19,9 +22,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   justify-content: center;
-  height: 100%;
-  min-height: calc(100% - 16px);
-  min-height: calc(100dvh - 16px);
   padding: 8px;
 }
 
